<resources>
    <string name="app_name">LOTR Journeys Editor</string>
    <string name="app_not_located_on_device">Lord Of the Rings - Journeys In Middle-earth was not found on this device</string>
    <string name="game_difficulty_hard">Hard</string>
    <string name="game_difficulty_normal">Normal</string>
    <string name="game_difficulty_adventure">Adventure</string>
    <string name="game_chapter">Chapter: %d - %s</string>
    <string name="party_name">Party Name:</string>
    <string name="lore">Lore:</string>
    <string name="current_campaign">Campaign:</string>
    <string name="current_chapter">Chapter:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="last_stands_failed">Last Stands:</string>
    <string name="xp">XP</string>
    <string name="hero_image">Hero Image</string>
    <string name="save">Save</string>
    <string name="hero_not_init">N/A</string>
    <string name="export">Export…</string>
    <string name="restore_from_backup">Restore from backup</string>
    <string name="export_message">Save game file was saved and exported to the \'Downloads\' folder on your device.\nLook for a file named \'SaveGameA\' and copy it to the device you want to move the saved game to.</string>
    <string name="export_dialog_title">Export save game file</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_request_msg">In order to read and write the save game data, the app will now request from you a permission to access the device storage.</string>
    <string name="permission_denied_msg">Since no read/write permission were given the app will now close.</string>
    <string name="save_failed_msg_title">Saving failed</string>
    <string name="save_failed_msg">Saving the changes to the save game file failed.</string>
    <string name="warning_title">Warning</string>
    <string name="app_warning_msg">This app is experimental and might damage save game files unintentionally. Backups are made but note that the developer takes no responsibility about any damage that might be caused by this app.</string>
    <string name="i_understand">I Understand</string>
    <string name="dont_show_again">Don\'t show me again</string>
    <string name="edit_save_game_title">Edit saved game</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="select_saved_game">Select a saved game to edit</string>
    <string name="download_it_now">Download it now</string>
    <string name="app_info">Application info</string>
    <string name="credits_title">Credits</string>
    <string name="credits_msg">Thanks for everyone who helped to build this app.  Icons for this app are from https://icons8.com\n\nSpecial thanks to Francesc Lopez for helping me debug the Ember Crown campaign</string>
    <string name="nullValue">null</string>
    <string name="chapter_scene">Chapter Scene</string>
    <string-array name="hero_names">
        <item>Aragorn</item>
        <item>Beravor</item>
        <item>Bilbo</item>
        <item>Elena</item>
        <item>Gimli</item>
        <item>Legolas</item>
        <item>Arwen</item>
        <item>Gandalf</item>
        <item>Eleanor</item>
        <item>Dis</item>
        <item>Balin</item>
    </string-array>
    <string-array name="campaign_names">
        <item>Bones of Arnor</item>
        <item>Hunt for the Ember Crown</item>
        <item>Shadowed Paths</item>
    </string-array>
    <string-array name="chapter_names_campaign_1">
        <item>Chapter 1</item>
        <item>Chapter 2</item>
        <item>Chapter 3</item>
        <item>Chapter 4</item>
        <item>Chapter 5</item>
        <item>Chapter 6</item>
        <item>Chapter 7</item>
        <item>Chapter 8</item>
        <item>Chapter 9</item>
        <item>Chapter 10</item>
        <item>Chapter 11</item>
        <item>Chapter 12</item>
        <item>Chapter 13</item>
        <item>Chapter 14</item>
    </string-array>
    <string-array name="chapter_names_campaign_2">
        <item>Chapter 1</item>
        <item>Chapter 2</item>
        <item>Chapter 3</item>
        <item>Chapter 4</item>
        <item>Chapter 5</item>
        <item>Chapter 6</item>
        <item>Chapter 7</item>
        <item>Chapter 8</item>
        <item>Chapter 9</item>
        <item>Chapter 10</item>
        <item>Chapter 11</item>
        <item>Chapter 12</item>
        <item>Chapter 13</item>
        <item>Chapter 14</item>
        <item>Chapter 15</item>
        <item>Chapter 16</item>
        <item>Chapter 17</item>
        <item>Chapter 18</item>
        <item>Chapter 19</item>
        <item>Chapter 20</item>
        <item>Chapter 21</item>
        <item>Chapter 22</item>
        <item>Chapter 23</item>
        <item>Chapter 24</item>
        <item>Chapter 25</item>
        <item>Chapter 26</item>
        <item>Chapter 27</item>
        <item>Chapter 28</item>
        <item>Chapter 29</item>
        <item>Chapter 30</item>
    </string-array>
    <string-array name="difficulty_names">
        <item>Normal</item>
        <item>Hard</item>
        <item>Adventure</item>
    </string-array>
</resources>
