<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/hero_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/hero_1"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/hero_image"
        android:background="#fff"
        android:elevation="3dp"/>

    <il.co.woo.lotrjourneyseditor.FontTextView
    android:id="@+id/hero_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    android:textSize="20sp"
    tools:text="Gimli"
    style="@style/AppText"/>

    <il.co.woo.lotrjourneyseditor.FontTextView
        android:id="@+id/hero_xp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xp"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:labelFor="@id/hero_xp"
        style="@style/AppText"/>

    <EditText
        android:id="@+id/hero_xp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:inputType="numberDecimal"
        tools:text="20"
        android:textAlignment="center"
        android:hint="@string/cannot_be_empty"
        android:textColorHint="@android:color/holo_red_dark"/>


</LinearLayout>