<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:fillViewport="true"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:id="@+id/main_container">

        <TextView
            android:id="@+id/app_installed_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/app_not_located_on_device"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            style="@style/AppText" />

        <TextView
            android:id="@+id/edit_save_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/select_saved_game"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            style="@style/AppText" />

        <Button
            android:id="@+id/ffg_jime_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_installed_status"
            android:text="@string/download_it_now"
            android:background="@android:color/transparent"
            style="@style/AppText" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:rippleColor="@null"
            android:elevation="0dp"
            app:elevation="0dp"
            app:backgroundTint="@android:color/transparent"
            android:layout_gravity="end|bottom"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/info"
            android:contentDescription="@string/app_info"
            android:background="@null"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>